add labels resource
